# marc21-rs

./: .deny.toml  .gitattributes  .rustfmt.toml  .typos.toml  Cargo.toml  README.md
.cargo/: config.toml
.config/: deny.toml
.github/: dependabot.yml
.github.bak/workflows/: python.yaml  rust.yaml
.github/workflows/: book.yaml  ci.yaml  lint.yaml  python-release.yaml  python.yaml  release.yaml  rust.yaml
contrib/completion/: marc21-completion.bash  marc21-completion.fish  marc21-completion.zsh
contrib/skosify/: gnd.toml
crates/marc-record/: Cargo.toml
crates/marc21-cli/: Cargo.toml
crates/marc21-cli/src/: cli.rs  error.rs  main.rs  prelude.rs  progress.rs  unicode.rs  utils.rs
crates/marc21-cli/src/commands/: build_completion.rs  build_man.rs  completions.rs  concat.rs  count.rs  dedup.rs  describe.rs  filter.rs  frequency.rs  glimpse.rs  grep.rs  hash.rs  invalid.rs  mod.rs  partition.rs  print.rs  sample.rs  select.rs  skosify.rs  split.rs
crates/marc21-cli/tests/e2e/: build_completion.rs  build_man.rs  completions.rs  concat.rs  count.rs  dedup.rs  describe.rs  filter.rs  frequency.rs  glimpse.rs  grep.rs  hash.rs  invalid.rs  lib.rs  partition.rs  prelude.rs  print.rs  sample.rs  select.rs  skosify.rs  split.rs
docs/book/: book.toml  custom.css
docs/book/src/: SUMMARY.md  index.md  installation.md
docs/book/src/concepts/: filter.md  indicator-matcher.md  path.md  query-and-path.md  query.md  record-matcher.md  subfield-matcher.md  tag-matcher.md
docs/book/src/getting-started/: first-steps.md  installation.md
docs/book/src/reference/commands/: common-opts.md  exit-status.md  filter-opts.md  index.md  marc21-concat.md  marc21-count.md  marc21-dedup.md  marc21-describe.md  marc21-filter.md  marc21-frequency.md  marc21-glimpse.md  marc21-grep.md  marc21-hash.md  marc21-invalid.md  marc21-partition.md  marc21-print.md  marc21-sample.md  marc21-select.md  marc21-skosify.md  marc21-split.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: byte_record.rs  path.rs  query.rs  record_matcher.rs  tag_matcher.rs  value.rs
fuzz/regressions/: minimized-from-684599ec8142d3de6a48dac85feefe9aa52e7ef9  minimized-from-aecc1347e00fcd69ba8213d26dc723ee6e0276c9  minimized-from-d76e011fc61ce3e87731b08b6d1183368e5a0237
marc21-cli/: Cargo.toml
marc21-cli/src/: cli.rs  main.rs  prelude.rs  progress.rs  utils.rs
marc21-cli/src/commands/: concat.rs  count.rs  invalid.rs  mod.rs  print.rs
marc21-cli/tests/e2e/: completions.rs  concat.rs  count.rs  invalid.rs  lib.rs  prelude.rs  print.rs
marc21-matcher/: Cargo.toml
marc21-matcher/fuzz/: Cargo.toml
marc21-matcher/fuzz/fuzz_targets/: tag_matcher.rs
marc21-matcher/src/: common.rs  lib.rs  quantifier.rs  subfield_matcher.rs  tag_matcher.rs  value.rs
marc21-record/: Cargo.toml
marc21-record/fuzz/: Cargo.toml
marc21-record/fuzz/fuzz_targets/: byte_record.rs
marc21-record/fuzz/regressions/: minimized-from-aca4bcd701d603885d569470c2c5767f0b54515e
marc21-record/src/: common.rs  directory.rs  error.rs  field.rs  leader.rs  lib.rs  record.rs  subfield.rs  tag.rs
marc21-record/src/io/: mod.rs  reader.rs
marc21-record/tests/data/: ada.mrc
marc21-record/tests/fuzz/: lib.rs
python/: .gitignore  Cargo.toml  pyproject.toml
python/polars-marc21/: Cargo.toml  pyproject.toml
python/polars-marc21/src/: lib.rs
python/polars-marc21/src/polars_marc21/: __init__.py
python/src/: error.rs  lib.rs  read.rs
python/src/polars_marc21/: __init__.py  _core.pyi  _scan.py
python/tests/: __init__.py  conftest.py  smoke_test.py  test_predicate.py  test_query.py  test_read_marc21.py  test_scan_marc21.py
python/tests/matcher/: test_control_field_matcher.py  test_indicator_matcher.py  test_leader.py  test_subfield_code_matcher.py  test_tag_matcher.py
scripts/: check-completions.sh  check-dco.sh
src/: common.rs  directory.rs  error.rs  field.rs  leader.rs  lib.rs  record.rs  subfield.rs  tag.rs  value.rs
src/error/: matcher.rs  mod.rs  path.rs  record.rs
src/io/: reader.rs
src/matcher/: common.rs  comparison_matcher.rs  control_field_matcher.rs  error.rs  field_matcher.rs  indicator_matcher.rs  leader_matcher.rs  mod.rs  operator.rs  options.rs  quantifier.rs  record_matcher.rs  subfield_matcher.rs  tag_matcher.rs  utils.rs  value.rs
src/matcher/field/: control.rs  count.rs  data.rs  exists.rs  mod.rs  parse.rs
src/matcher/indicator/: mod.rs  parse.rs
src/matcher/leader/: mod.rs  parse.rs
src/matcher/record/: mod.rs  parse.rs
src/matcher/shared/: mod.rs  operator.rs  value.rs
src/matcher/subfield/: contains.rs  count.rs  ends_with.rs  exists.rs  in.rs  mod.rs  parse.rs  regex.rs  starts_with.rs  strsim.rs
src/matcher/tag/: mod.rs  parse.rs
src/path/: error.rs  mod.rs  parse.rs
src/query/: control_field.rs  data_field.rs  dtype.rs  error.rs  leader.rs  mod.rs  parse.rs
tests/api/: lib.rs  path.rs  query.rs
tests/api/matcher/: comparison.rs  connectives.rs  contains.rs  count.rs  ends_with.rs  exists.rs  fixed_length.rs  group.rs  in.rs  mod.rs  regex.rs  starts_with.rs  strsim.rs
tests/book/: lib.rs
tests/data/: ada.mrc  ada.ttl  ada.txt  hashes.csv  hashes.tsv  invalid.mrc  minna-nfkc.txt  minna.mrc  minna.txt
tests/fuzz/: lib.rs
