[package]
name = "marc21"
version = "0.1.0"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
license = "EUPL-1.2"
rust-version = "1.92"
edition = "2024"

[workspace]
members = [
  "crates/marc21-cli"
]

[features]
default = ["performant"]
performant = ["winnow/simd"]

[dependencies]
bstr = { version = "1.12", features = ["std"], default-features = false }
flate2 = { version = "1.1" }
winnow = { version = "0.7" }

[[test]]
path = "tests/fuzz/lib.rs"
name = "fuzz-regressions"

