[package]
name = "marc21"
version = "0.1.0"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
license = "EUPL-1.2"
rust-version = "1.93"
edition = "2024"

[workspace]
default-members = ["crates/marc21-cli"]
members = ["crates/marc21-cli"]

[features]
default = ["performant"]
performant = ["winnow/simd"]
serde = ["dep:serde"]

[dependencies]
bstr = { version = "1.12", features = ["std"], default-features = false }
flate2 = { version = "1.1" }
serde = { version = "1.0", optional = true }
winnow = { version = "0.7" }

[dev-dependencies]
serde_test = { version = "1.0" }

[[test]]
path = "tests/fuzz/lib.rs"
name = "fuzz-regressions"

