[package]
name = "marc21"
version = "0.1.0"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
repository = "https://github.com/deutsche-nationalbibliothek/marc21-rs"
description = "A toolkit for processing MARC 21 records."
categories = ["parser-implementations"]
keywords = ["marc21", "code4lib"]
license = "EUPL-1.2"
rust-version = "1.93"
edition = "2024"

[workspace]
default-members = ["crates/marc21-cli"]
members = ["crates/marc21-cli"]

[features]
default = ["performant"]
performant = ["winnow/simd", "perf-inline"]
serde = ["dep:serde"]
perf-inline = []
unstable = []

[dependencies]
aho-corasick = { version = "1.1" }
bstr = { version = "1.12", features = ["std", "alloc"], default-features = false }
flate2 = { version = "1.1", features = ["zlib-rs"], default-features = false }
regex = { version = "1.12" }
serde = { version = "1.0", optional = true }
strsim = { version = "0.11" }
smallvec = { version = "1.15" }
winnow = { version = "0.7" }

[dev-dependencies]
serde_test = { version = "1.0" }

[[test]]
path = "tests/fuzz/lib.rs"
name = "fuzz-regressions"

[[test]]
path = "tests/api/lib.rs"
name = "api"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
