[workspace]
members = ["."]

[package]
name = "marc21-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
marc21 = { path = "../" }

[[bin]]
name = "byte-record"
path = "fuzz_targets/byte_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "record-matcher"
path = "fuzz_targets/record_matcher.rs"
test = false
doc = false
bench = false

# [[bin]]
# name = "value"
# path = "fuzz_targets/value.rs"
# test = false
# doc = false
# bench = false
