[package]
name = "marc21-cli"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "marc21"
path = "src/main.rs"

[features]
default = ["performant"]
performant = ["marc21-record/performant"]

[dependencies]
bstr = { workspace = true }
clap = { workspace = true }
marc21-record = { workspace = true }
