[package]
name = "marc21-cli"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "marc"
path = "src/main.rs"

[features]
default = ["performant"]
performant = ["marc21-record/performant"]

[dependencies]
bstr = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
indicatif = { workspace = true }
marc21-record = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }

[[test]]
path = "tests/e2e/lib.rs"
name = "e2e"

