[package]
name = "marc21-matcher"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["performant"]
performant = [
  "marc21-record/performant",
  "winnow/simd"
]

[dependencies]
bstr = { workspace = true }
marc21-record = { workspace = true }
winnow = { workspace = true }
