[package]
name = "polars-marc21"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
license = "EUPL-1.2"
description = "Rust bindings for polars-marc21"
repository = "https://github.com/deutsche-nationalbibliothek/marc21-rs/"
documentation = "https://deutsche-nationalbibliothek.github.io/marc21-rs/"


[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
bstr = { version = "1.12" }
marc21 = { path = "../" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
