[project]
name = "polars-marc21"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nico Wagner", email = "n.wagner@dnb.de" }
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.41.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "ruff-lsp>=0.0.62",
    "ty>=0.0.46",
]

[tool.maturin]
module-name = "polars_marc21._core"
python-packages = ["polars_marc21"]
python-source = "src"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" }
]

[tool.ruff]
line-length = 72
lint.select = ["ALL"]
lint.ignore = [
    "D203", # incorrect-blank-line-before-class
    "D212", # multi-line-summary-first-line
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["S101", "PLR2004"]

[tool.pytest.ini_options]
addopts = "-ra -s -v --cov=src/polars_marc21"
testpaths = ["./tests"]
strict = true
