[project]
name = "polars-marc21"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "EUPL-1.2"
license-files = ["LICENSE"]
authors = [
    { name = "Nico Wagner", email = "n.wagner@dnb.de" }
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.41.2",
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Rust",
    "Topic :: File Formats",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",    
]

[project.urls]
Documentation = "https://deutsche-nationalbibliothek.github.io/marc21-rs/"
Repository = "https://github.com/deutsche-nationalbibliothek/marc21-rs"
Issues = "https://github.com/deutsche-nationalbibliothek/marc21-rs/issues"

[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "ruff-lsp>=0.0.62",
    "ty>=0.0.46",
]

[tool.maturin]
module-name = "polars_marc21._core"
python-packages = ["polars_marc21"]
python-source = "src"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" }
]

[tool.ruff]
line-length = 72
lint.select = ["ALL"]
lint.ignore = [
    "D203", # incorrect-blank-line-before-class
    "D212", # multi-line-summary-first-line
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["S101", "PLR2004"]
"tests/smoke_test.py" = ["T201", "D103"]

[tool.pytest.ini_options]
addopts = "-ra -s -v --cov=src/polars_marc21"
testpaths = ["./tests"]
strict = true
