[package]
name = "marc21-cli"
version = "0.1.0"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
repository = "https://github.com/deutsche-nationalbibliothek/marc21-rs"
description = "A command-line tool for processing MARC21 records."
categories = ["command-line-utilities"]
keywords = ["marc21", "cli", "code4lib"]
license = "EUPL-1.2"
rust-version = "1.93"
edition = "2024"

[[bin]]
name = "marc21"
path = "src/main.rs"

[features]
default = ["performant"]
performant = ["marc21/performant"]

[dependencies]
bstr = { version = "1.12", features = ["std"], default-features = false }
csv = { version = "1.4" }
clap_complete = { version = "4.5" }
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1.1" }
indicatif = { version = "0.18" }
marc21 = { path = "../../", version = "0.1" }
rand = { version = "0.10" }
sha2 = { version = "0.10" }

[dev-dependencies]
anyhow = { version = "1.0" }
assert_cmd = { version = "2.1" }
assert_fs = { version = "1.1" }
predicates = { version = "3.1" }

[[test]]
path = "tests/e2e/lib.rs"
name = "e2e"

