[package]
name = "marc21-cli"
version = "0.2.0"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
repository = "https://github.com/deutsche-nationalbibliothek/marc21-rs"
description = "A command-line tool for processing MARC-21 records."
categories = ["command-line-utilities"]
keywords = ["marc21", "cli", "code4lib"]
license = "EUPL-1.2"
rust-version = "1.93"
edition = "2024"

[[bin]]
name = "marc21"
path = "src/main.rs"

[[test]]
path = "tests/e2e/lib.rs"
name = "e2e"

[dependencies]
bstr = { version = "1.12", features = ["std"], default-features = false }
clap_complete = { version = "4.5", optional = true }
clap_mangen = { version = "0.2", optional = true }
clap = { version = "4.5", features = ["derive"] }
csv = { version = "1.4" }
flate2 = { version = "1.1" }
indicatif = { version = "0.18" }
marc21 = { path = "../../", version = "0.2" }
rand = { version = "0.10" }
sha2 = { version = "0.10" }

[dev-dependencies]
anyhow = { version = "1.0" }
assert_cmd = { version = "2.1" }
assert_fs = { version = "1.1" }
predicates = { version = "3.1" }

[features]
default = ["performant"]

# Commands and functions that are only needed during the build process
# or packaging are activated with the `build` feature. This includes,
# for example, the commands for generating man pages (`build-man`) and
# shell completions (`build-completion`).
build = ["dep:clap_mangen", "dep:clap_complete"]

# This feature activates optimizations aimed at improving performance.
# This includes, for example, the activation of SIMD or a more
# aggressive inline strategy. Since the main goal of the project is high
# performance, the feature is enabled by default.
performant = ["marc21/performant"]

# New features that are still in the testing phase can be activated
# using the `unstable` feature. Keep in mind that these functions may
# change at any time.
unstable = ["marc21/unstable"]

