[workspace]
members = ["."]

[package]
name = "marc21-matcher-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
marc21-matcher = { path = "../../marc21-matcher" }

[[bin]]
name = "tag_matcher"
path = "fuzz_targets/tag_matcher.rs"
test = false
doc = false
bench = false

[[bin]]
name = "value"
path = "fuzz_targets/value.rs"
test = false
doc = false
bench = false
